# PenPixelPioneers

./: README.md
build-camera-Desktop_Qt_6_6_1_GCC_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  camera  cmake_install.cmake  qtcsettings.cmake  rules.ninja
build-camera-Desktop_Qt_6_6_1_GCC_64bit-Release/.cmake/api/v1/reply/: cache-v2-ca034944e0b4cd1f9106.json  cmakeFiles-v1-bc461146c1458afcea86.json  codemodel-v2-8389b02617896f5478dd.json  index-2024-01-12T06-09-11-0959.json  target-camera-Release-3a8ff7a755993f4c4cc7.json  target-camera_autogen-Release-c7587e5c356bd6174a54.json
build-camera-Desktop_Qt_6_6_1_GCC_64bit-Release/.qt/: QtDeploySupport.cmake
build-camera-Desktop_Qt_6_6_1_GCC_64bit-Release/camera_autogen/: moc_predefs.h  mocs_compilation.cpp
build-camera-Desktop_Qt_6_6_1_GCC_64bit-Release/camera_autogen/EWIEGA46WW/: moc_camera.cpp  moc_fontrenderer.cpp  moc_textsimulation.cpp  moc_worker.cpp
build-camera-Desktop_Qt_6_6_1_GCC_64bit-Release/camera_autogen/include/: moc_imagesettings.cpp  moc_metadatadialog.cpp  moc_videosettings.cpp  ui_camera.h
build-camera-Desktop_Qt_6_6_1_GCC_64bit-Release/config.tests/static_link_order/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
camera/: CMakeLists.txt  CMakeLists.txt.user.228a38b  CMakeLists.txt.user.2ceb535  CMakeLists.txt.user.705b9a0  CMakeLists.txt.user.c1d3906  CMakeLists.txt.user.fc3931b  bg_remover.py  camera.cpp  camera.h  camera.pro  camera.ui  cli.cpp  constants.cpp  constants.h  default.json  feature_extractor.cpp  feature_extractor.h  fontrenderer.cpp  fontrenderer.h  generate_text.cpp  identify_writer.cpp  identify_writer.h  line_segmentor.cpp  main.cpp  pngtosvg.cpp  pngtosvg.hpp  pre_processor.cpp  sheettopng.cpp  sheettopng.hpp  svgtottf.cpp  svgtottf.hpp  svgtottf.py  textsimulation.cpp  textsimulation.h  transform.py  utils.cpp  utils.h  worker.cpp  worker.h
camera/data/: test_generator.cpp
camera/data/data_single/: coordinates.json
